--- a/NinjaKit.safariextension/Info.plist
+++ b/NinjaKit.safariextension/Info.plist
@@ -5,7 +5,7 @@
 	<key>Author</key>
 	<string>os0x</string>
 	<key>Builder Version</key>
-	<string>534.52.7</string>
+	<string>9537.85.10.17.1</string>
 	<key>CFBundleDisplayName</key>
 	<string>NinjaKit</string>
 	<key>CFBundleIdentifier</key>
@@ -13,9 +13,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.9.1</string>
+	<string>0.9.2a</string>
 	<key>CFBundleVersion</key>
-	<string>0.9.1</string>
+	<string>0.9.2a</string>
 	<key>Chrome</key>
 	<dict>
 		<key>Global Page</key>
