--- a/NinjaKit.safariextension/manifest.json
+++ b/NinjaKit.safariextension/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "NinjaKit",
   "description": "yet another greasemonkey. This is experimental extension.",
-  "version": "0.9.1",
+  "version": "0.9.2a",
   "permissions": [ "tabs", "http://*/", "https://*/", "unlimitedStorage" ],
   "background_page": "index.html",
   "options_page":"options.html",
